--- a/.github/workflows/mlops-pipeline.yml
+++ b/.github/workflows/mlops-pipeline.yml
@@ -41,12 +41,21 @@ jobs:
 
       - name: Cache Python Virtualenv
         id: cache-venv
-        uses: actions/cache@6849a6489940f00c2f30c0fb92c6274307ccb58a # v4.1.2
+        uses: actions/cache@v4
         with:
           path: pipeline/.venv
-          key: ${{ runner.os }}-venv-${{ hashFiles('pipeline/requirements.txt') }}
+          key: ${{ runner.os }}-venv-${{ hashFiles('pipeline/requirements/**/*.txt') }}
           restore-keys: |
             ${{ runner.os }}-venv-
+
+      - name: Cache Models Virtualenv
+        id: cache-venv-models
+        uses: actions/cache@v4
+        with:
+          path: pipeline/.venv-models
+          key: ${{ runner.os }}-venv-models-${{ hashFiles('pipeline/requirements/**/*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-venv-models-
 
       - name: Run DVC Pipeline
         working-directory: pipeline
