--- a/pipeline/dvc.yaml
+++ b/pipeline/dvc.yaml
@@ -3,10 +3,10 @@ stages:
     cmd:
       - UV_LINK_MODE=copy uv venv .venv --python 3.9
       - .venv/bin/python -m ensurepip --upgrade
-      - .venv/bin/python -m pip install -q --no-cache-dir uv
-      - .venv/bin/uv pip install -q --no-cache-dir -r requirements/base.txt
+      - .venv/bin/python -m pip install -q uv
+      - .venv/bin/uv pip install -q -r requirements/base.txt
       - rsync -a .venv/ .venv-models/
-      - .venv-models/bin/uv pip install --no-cache-dir -r requirements/models.txt
+      - .venv-models/bin/uv pip install -r requirements/models.txt
       - .venv/bin/uv pip freeze > requirements/base-frozen.txt
       - .venv/bin/uv pip freeze > requirements/models-frozen.txt
     outs:
